--- a/index.html
+++ b/index.html
@@ -17,14 +17,22 @@
 				<!-- Header -->
 					<header id="header" class="alt">
 						<span class="logo"><img src="images/logo.svg" alt="" /></span>
-						<h1>Backup raw photos</h1>
+						<h1>Backup Raw Photo</h1>
 						<p>for professional photographers.</p>
+            <hr />
+            <p>
+              Simple Pricing: $20/month per 1TB (first 50GB is free to test out this service).
+            </p>
+            <hr />
+            <p>Your photos are copied to 4 physical locations, 3 in the US (Oregon, Chicago, Houston) and 1 in Switzerland. <br />
+              We then manually move your photos to physical tapes and disconnect it from internet.
+            </p>
 					</header>
 
 				<!-- Nav -->
 					<nav id="nav">
 						<ul>
-							<li><a href="#intro" class="active">Introduction</a></li>
+							<li><a href="#intro" class="active">50GB FREE</a></li>
 							<li><a href="#first">First Section</a></li>
 							<li><a href="#second">Second Section</a></li>
 							<li><a href="#cta">Get Started</a></li>
@@ -39,13 +47,14 @@
 								<div class="spotlight">
 									<div class="content">
 										<header class="major">
-											<h2>Ipsum sed adipiscing</h2>
+											<h2>First 50GB is FREE</h2>
 										</header>
-										<p>Sed lorem ipsum dolor sit amet nullam consequat feugiat consequat magna
-										adipiscing magna etiam amet veroeros. Lorem ipsum dolor tempus sit cursus.
-										Tempus nisl et nullam lorem ipsum dolor sit amet aliquam.</p>
+										<p>Raw file is crazyly large, around 20 - 30MB each. With 50GB free, you can backup around 2,500 raw photos.
+                      <br /><br />
+                      It's FREE so you can test out this service.
+                    </p>
 										<ul class="actions">
-											<li><a href="generic.html" class="button">Learn More</a></li>
+											<li><a href="generic.html" class="button special">Backup Now</a></li>
 										</ul>
 									</div>
 									<span class="image"><img src="images/pic01.jpg" alt="" /></span>
